--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "quotes": ["error", "single"],
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
+    "next/no-img-element": "off",
+    "next/next-script-for-ga": "off"
+  }
 }
