single quote & eslintrc.json

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # DATABASE_URL="postgresql://postgres:Azerty123@localhost:5432/agocommu"
 DATABASE_URL="postgresql://agocommu_owner:npg_k42flJZbQPRd@ep-autumn-bread-a2iba971-pooler.eu-central-1.aws.neon.tech/agocommu?sslmode=require"
-NEXTAUTH_SECRET="ttj8D9rlKR"
+NEXTAUTH_SECRET="fitSjPvlQApjAuwJIwO7gxsk"
